# sei

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  run_completeness.sh  run_hw.sh  run_import.sh
.github/workflows/: ci.yml
Sei/: Api.lean  Bus.lean  Core.lean  CoreProofs.lean  Device.lean  Endian.lean  Equiv.lean  Fidelity.lean  Float.lean  IR.lean  README.md  Simd.lean  Smoke.lean
Sei/Drivers/: AdapterExp.lean  ApiExp.lean  ArmBankExp.lean  ArmExp.lean  ArmThumbExp.lean  ArmVecCheck.lean  ControllerExp.lean  CoreSmoke.lean  DdrExp.lean  DeviceExp.lean  ExternalExp.lean  FidelityExp.lean  FlashExp.lean  FloatCheck.lean  FrontierExp.lean  HwBringup.lean  HwExp.lean  IRExp.lean  MipsBdExp.lean  MipsBringup.lean  MipsExp.lean  MipsTlbExp.lean  MipsVecCheck.lean  MultiExp.lean  PcodeExp.lean  PromotionExp.lean  RegExp.lean  RehostExp.lean  SeiCli.lean  StoreFaultExp.lean  ThumbVecCheck.lean  TopoExp.lean  ToyEquiv.lean  ToyExp.lean  TraceExp.lean
Sei/Hw/: Adapter.lean  Checkpoint.lean  Descriptor.lean  Frontier.lean  Intake.lean  Pcode.lean  Promotion.lean  RegisterIR.lean  Runner.lean  Topology.lean
Sei/Isa/: Arm.lean  Mips.lean  Toy.lean  ToyAlt.lean
docs/: api.md  descriptor.md  isa.md
tests/armvec/: a32-branch-vectors.json  a32-completeness-frac.json  a32-completeness.json  a32-dp-vectors.json  a32-ldm-vectors.json  a32-ldst-vectors.json  a32-media-vectors.json  a32-msr-vectors.json  a32-mul-vectors.json  a32-narrow-sat-vectors.json  a32-narrow-vectors.json  a32-native64-vectors.json  a32-nativefp-vectors.json  a32-nativefull-vectors.json  a32-nativenarrow-vectors.json  a32-vfp-vectors.json  a32-xldst-vectors.json  t16-vectors.json  t32-vectors.json
tests/fixtures/: classic-arm-be.sei.json  cli-demo.sei.json  toy-machine.sei.json
tests/float/: binary32-vectors.json  binary64-vectors.json  conv-vectors.json  fma-vectors.json
tests/mipsvec/: mips32-vectors.json
tools/: sony_drive.sh
tools/armgen/: fuzz.py  gen_vectors.py  narrow_sat_oracle.py  native_fp_oracle.c  native_full_oracle.c  native_narrow_oracle.c  native_oracle.c  neon_fuzz.py  neon_gen.py  softfloat64_gen.py  softfloat_conv_gen.py  softfloat_fma_gen.py  softfloat_gen.py  t32_gen.py  thumb_gen.py
tools/asl/: completeness.py
tools/mipsgen/: mips_oracle.py
